--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@ cost of materials due to the organization of work</div>
 	<div><button class="page4__button">Phone<p>Your phone number:</p></button></div>
 	<div><button class="page4__button page4__button--3">Submit</button></div>
 </div>
-<div class="page4__lagree"><img src="images/Снимок18.JPG">I agree to the processing of personal data</div>
+<div class="page4__lagree"><input type="checkbox"> I agree to the processing of personal data</div>
 	<div class="page4__text"><h3>TYPES OF REPAIR</h3><p><img src="images/Снимок10.JPG"class="page4__text--img10"></p> </div>
 </div>
 <!-- страница5 -->
@@ -108,19 +108,80 @@ cost of materials due to the organization of work</div>
 <!-- page6 -->
 <div class="page6">
 	<div class="page6__free">
-		<p><img src="images/Снимок15.JPG">Our specialist will arrive for measurements per day<br>contact, or appoint a date convenient for you
-		</p>
+		<ul>Our specialist will arrive for measurements per day<br>contact, or appoint a date convenient for you
+		</ul>
 		<p><img src="images/Снимок15.JPG">Free metering
 		</p>
 		<p><img src="images/Снимок15.JPG">Free consultation
 		</p>
 		<p><img src="images/Снимок15.JPG">Get a cost estimate and the timing of your future repairs
 		</p>
+<!-- the copy -->
+
+<ol class="rounded">
+  <li><a href="#">Our specialist will arrive for measurements per day<br>contact, or appoint a date convenient for you</a></li>
+  <li><a href="#">Free metering</a></li>
+  <li><a href="#">Free consultation</a></li>
+  <li><a href="#">Get a cost estimate and the timing of your future repairs</a></li>
+  
+</ol>
+<!-- the copy end -->
+
 	</div>
 	<div class="page6__form">
+		<div class="padge6__imput">
+			<form><label>Name</label>
+		<input type="text" placeholder="What is your name">
+	</form>
 		
+		</div>
+		<div class="padge6__imput">
+		<input type="text" size="40">
+		</div>
+		<div class="padge6__imput">
+		<input type="text" size="40">
+		<p><input type="checkbox">  I agree to the processing of personal data</p>
+		<button class="page6__button">Call the measurer</button>
+		</div>
+
+		<div>
+		
+		</div>
 	</div>
 </div>
+<div class="vector--pig">
+	<div class="vector"><img src="images/Vector1.png"><h1 class="vector__text">Help save 10 - 20% of the cost of materials
+	</h1></div>
+</div>
+
+<!-- страница7 -->
+<div class="description">
+	<div class="description__text">
+		<h1 class="header7">We realize your<br>wildest fantasies</h1>
+		<ul class="discription__list">
+			<li class="description__room">American classic</li>
+			<li class="description__room">Empire</li>
+			<li class="description__room">Classical</li>
+			<li class="description__room">Loft</li>
+			<li class="description__room">Minimalism</li>
+			<li class="description__room">Provence</li>
+			<li class="description__room">Romanticism</li>
+			<li class="description__room">Scandinavian style</li>
+			<li class="description__room">Mediterranean style</li>
+			<li class="description__room">High tech</li>
+			<li class="description__room">Eclecticism</li>
+		</ul>
+	</div>
+	<div class="discription__images description__images--left">
+		<img src="images/2.7.jpg">
+		<img src="images/3.7.jpg" class="description__image--bottom">
+	</div>
+	<div class="discription__images description__images--right">
+		<img src="images/5.7.jpg">
+		<img src="images/4.7.jpg" class="description__image--bottom">
+	</div>
+</div>
+
 
 </body>
 </html>
