--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 	<link rel="stylesheet" href="css/page6.css">
 	<link rel="stylesheet" href="css/page5.css">
 	<link rel="stylesheet" href="css/page7.css">
-<!-- 	<link rel="stylesheet" href="css/page8.css">
-	<link rel="stylesheet" href="css/page9.css"> -->
+	<link rel="stylesheet" href="css/page8.css">
+	<!-- <link rel="stylesheet" href="css/page9.css"> -->
 	
 </head>
 <body>
@@ -182,6 +182,68 @@ cost of materials due to the organization of work</div>
 	</div>
 </div>
 
+<!-- page 8 -->
+
+	<div class="page8">
+	<h1 class="page7-8">design project</h1>
+	<img src="images/Снимок10.JPG" class="page7-8 page7-8--centr">
+	<p class="page7-8 page7-8--bottom">Design project not only helps to make the repair of your apartment more modern,
+	but also significantly reduces the cost of materials and reduces the time of repair work.</p>
+	</div>
+
+	<div class="page8__rooms">
+		<div class="page8__room">
+		<div class="page8__image"><img src="images/1.8.jpg"></div>
+		<div class="page8__text">
+			<h4>Mini</h4>
+			<ul>
+				<li>Measurement drawing</li>
+				<li>Redevelopment</li>
+				<li>Plumbing plan.</li>
+				<li>equipment</li>
+			</ul></div>
+		<div class="page8__button">150 rub / m2</div></div>
+	<div class="page8__room">
+		<div class="page8__image"><img src="images/2.8.jpg"></div>
+		<div class="page8__text">
+			<h4>Standard</h4>
+			<ul>
+				<li>Measurement drawing</li>
+				<li>Redevelopment</li>
+				<li>Layout of furniture</li>
+				<li>Plan of ceilings</li>
+				<li>Floor Plan</li>
+				<li>Electricians plan</li>
+				<li>Lighting plan</li>
+			</ul></div>
+		<div class="page8__button">400 rub / m2</div></div>
+	<div class="page8__room">
+		<div class="page8__image"><img src="images/3.8.jpg"></div>
+		<div class="page8__text">
+			<h4>Full</h4>
+			<ul>
+				<li>Measurement drawing</li>
+				<li>Redevelopment</li>
+				<li>Layout of furniture</li>
+				<li>Plan of ceilings</li>
+				<li>Floor Plan</li>
+				<li>Electricians plan</li>
+				<li>Lighting plan</li>
+				<li>Wall reamers</li>
+				<li>3D visualization</li>
+				<li>Bill of materials</li>
+				<li>Departure for a selection of materials</li>
+				<li>Furniture selection</li>
+			</ul></div>
+		<div class="page8__button">900 rub / m2</div>
+	</div>
+	</div>
+	</div>
+		
+		<div class="page8__bg">
+</div>
+		</div>
+</div>
 
 </body>
 </html>
