--- a/index.html
+++ b/index.html
@@ -46,19 +46,22 @@
     <!-- page2 -->
     <div class="page2">
         <div class="page2__side page2__side--left">
-            <h2 class="page2__title">Completed<br> projects</h2>
+            <h2 class="page2__title">Completed<br> projects </h2>
             <p class="page2__text">Only a small part of the work performed by our company is presented<br> on the site. For 14 years on in the construction<br>
                 marketwe have made happy more than 1000 families</p>
             <div class="page2__params">
                 <div class="page2__params--sity">City:</div>
-                <div class="page2__params--sity2">
-                    <p>Rostov-on-Don</p>
-                    <p>LCD admiral</p>
-                </div>
-                <div class="page2__params--appart">apartment area:</div>
-                <div class="page2__params--time"></div>
-                <div class="page2__params--cost"></div>
+                <div class="page2__params--sity">apartment area:</div>
+                <div class="page2__params--sity2">Rostov-on-Don<br>
+                    LCD admiral</div>
+                <div class="page2__params--sity2">81 m2</div>
+                <div class="page2__params--sity">Repair time::</div>
+                <div class="page2__params--sity">Repair Cost:</div>
+                <div class="page2__params--sity2">3.5 months</div>
+                <div class="page2__params--sity2">Upon request</div>
             </div>
+            <div class="page2__params--time"></div>
+            <div class="page2__params--cost"></div>
         </div>
         <div class="page2__side page2__side--right">
             <div class="page2__buttons">
@@ -69,33 +72,39 @@
             <img src="images/Снимок.JPG" alt="" class="page2__img">
         </div>
     </div>
+    </div>
     <!-- страница3 -->
     <div class="page3">
         <div class="page3__background"></div>
         <h4 class="page3__control">online control</h4>
         <div class="page3__image"><img src="images/page3vector.svg" class="page3__vector">
         </div>
-       <img src="images/Снимок5.JPG" alt="" class="page3__work">
+        <img src="images/Снимок5.JPG" alt="" class="page3__work">
     </div>
     <!-- страница4 -->
     <div class="page4">
-        <div class="page4__img"><img src="images/Снимок8.JPG">
+        <img src="images/Rectangle 6.7.svg" class="page4__img">
+        <div class="page4__text">
             <p>At each facility, a camera is installed that broadcasts the progress of work on the<br> clock. At any time, you can go to our website and monitor the progress of work in<br> your apartment. You can watch the live broadcast from one of our facilities!<br>
                 Leave a request below and you will receive a link to the broadcast.</p>
         </div>
         <div class="page4__buttons">
-            <div><button class="page4__button">Name<p>What is your name:</p></button></div>
-            <div><button class="page4__button">Phone<p>Your phone number:</p></button></div>
-            <div><button class="page4__button page4__button--3">Submit</button></div>
+            <button class="page4__button"><span class="page4__phone">Name</span>
+                <p>What is your name:</p>
+            </button>
+            <button class="page4__button"><span class="page4__phone">Phone</span>
+                <p>Your phone number:</p>
+            </button>
+            <button class="page4__button page4__button--3">Submit</button>
         </div>
-        <div class="page4__lagree"><input type="checkbox"> I agree to the processing of personal data</div>
-        <div class="page4__text">
-            <h3>TYPES OF REPAIR</h3>
-            <p><img src="images/Снимок10.JPG" class="page4__text--img10"></p>
-        </div>
+        <input type="checkbox" class="page4__lagree">I agree to the processing of personal data
     </div>
     <!-- страница5 -->
     <div class="page5">
+        <div class="page4__name">
+            <h3>TYPES OF REPAIR</h3>
+            <p><img src="images/page5.vector.svg" class="page4__text--img10"></p>
+        </div>
         <div class="page5__images">
             <div><img src="images/Снимок11.JPG" class="page5__image"></div>
             <div><img src="images/Снимок12.JPG" class="page5__image"></div>
@@ -176,7 +185,7 @@
                 <button class="page6__button">Call the measurer</button>
             </div>
             <div class="page6__vector">
-                <img src="images/vectors/Group.svg" class="vector--pig">
+                <img src="images/page5.pig.svg" class="vector--pig">
                 <h1 class="vector__text">Help save 10 - 20% of the<br>post of materials
                 </h1>
             </div>
