--- a/index.html
+++ b/index.html
@@ -48,9 +48,24 @@
     <div class="page2">
         <div class="page2__side page2__side--left">
             <h2 class="page2__title">Completed<br> projects </h2>
-            <p class="page2__text">Only a small part of the work performed by our company is presented<br> on the site.
-                For 14 years on in the construction<br>
+            <p class="page2__text">Only a small part of the work performed by our company is presented on the site.
+                For 14 years on in the construction
                 marketwe have made happy more than 1000 families</p>
+            <div class=page2__images>
+                <button class="page2__arrow">
+                    <svg viewBox="0 0 8 14" fill="none">
+                        <path fill-rule="evenodd" clip-rule="evenodd"
+                            d="M6.56569 12.478L1.08689 6.99975L6.56569 1.52147L7.34778 2.30348L2.65107 6.99975L7.34778 11.696L6.56569 12.478Z"
+                            fill="white" stroke="white" stroke-width="0.75" />
+                    </svg>
+                </button>
+                <button class="page2__arrow page2__arrow--rigth">
+                    <svg viewBox="0 0 8 14" fill="none">
+                        <path fill-rule="evenodd" clip-rule="evenodd"
+                            d="M6.56569 12.478L1.08689 6.99975L6.56569 1.52147L7.34778 2.30348L2.65107 6.99975L7.34778 11.696L6.56569 12.478Z"
+                            fill="white" stroke="white" stroke-width="0.75" />
+                    </svg></button>
+            </div>
             <div class="page2__params">
                 <div class="page2__params--sity">City:</div>
                 <div class="page2__params--sity">apartment area:</div>
@@ -71,9 +86,9 @@
                 <button class="page2__button">Sochi Thieves</button>
                 <button class="page2__button">Rostov-on-Don Patriotic</button>
             </div>
-            <img src="images/Снимок.JPG" alt="" class="page2__img">
+            <div class="page2__img"><img src="images/Снимок.JPG" alt="">
+            </div>
         </div>
-    </div>
     </div>
     <!-- страница3 -->
     <div class="page3">
@@ -471,26 +486,27 @@
                     I agree to the processing of personal data<span class="checkmark">
                     </span></label>
                 <button class="button page10__button">Submit</button>
-</form>
+            </form>
         </div>
-    <p class="page10__botom">Rostov-on-Don, Nansen St., 239 Shopping Center
-        Decorum Tel +7 (928) 768 32 29</p>
-    <p class="page10__smail"><img src="images/10.3.svg" alt=""><img src="images/10.4.svg" alt=""></p>
-    <div class="page10__maps"><img src="images/10.8.jpg" alt=""></div>
+        <p class="page10__botom">Rostov-on-Don, Nansen St., 239 Shopping Center
+            Decorum Tel +7 (928) 768 32 29</p>
+        <p class="page10__smail"><img src="images/10.3.svg" alt=""><img src="images/10.4.svg" alt=""></p>
+        <div class="page10__maps"><img src="images/10.8.jpg" alt=""></div>
 
-    <div class="page10__footor">
-        <div class="button1">IC "Repair Design Project"</div>
-        <div class="button2">HOME</div>
-        <div class="button3">PROJECTS</div>
-        <div class="button4">MEASUREMENT</div>
-        <div class="button5">TEAM</div>
-        <div class="button6">REVIEWS</div>
-        <div class="button7">CONTACTS</div>
-        <div class="button8">
-            <+7 (928) 768-32-39/div> <div class="button9">Request a call
+        <div class="page10__footor">
+            <div class="button1">IC "Repair Design Project"</div>
+            <div class="button2">HOME</div>
+            <div class="button3">PROJECTS</div>
+            <div class="button4">MEASUREMENT</div>
+            <div class="button5">TEAM</div>
+            <div class="button6">REVIEWS</div>
+            <div class="button7">CONTACTS</div>
+            <div class="button8">
+                <+7 (928) 768-32-39/div> <div class="button9">Request a call
+            </div>
         </div>
     </div>
-    </div>
-    </body>
+    <script src="script.js"></script>
+</body>
 
 </html>
